<resources>
    <string name="app_name">Lab 6</string>
    <string name="enterEmail">Enter your email address:</string>
    <string name="emailHint">Type email here</string>
    <string name="enterPassword">Type your password:</string>
    <string name="loginButton">LOGIN</string>
    <string name="profileLabel">Your profile</string>
    <string name="nameLabel">Your name:</string>
    <string name="nameHint">Enter your name</string>
    <string name="emailTag">Your email:</string>
    <string name="pictureLabel">Your picture:</string>
    <string name="pictureText">Click the button above to take a picture</string>
    <string name="gotoChat">Go to chat</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="chat_hint">Type here</string>
    <string name="deleteEntry">Do you want to delete this?</string>
    <string name="row_select_msg">"The selected row is: "</string>
    <string name="databse_id_msg">"The database id is: "</string>
    <string name="gotoWeather">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
